# tk_openai_sdk_agent

./: .gitignore  README.md  build_free_walk_run.py  build_verfiry.py  build_为获取数据.py  create_report.py  pyproject.toml  temp.py
src/tk_openai_sdk_agent/core/: __init__.py  core.py
src/tk_openai_sdk_agent/data/: ip名称聚类.xlsx  成都世界线自由行数据.xlsx  未获取数据.xlsx
src/tk_openai_sdk_agent/database/: __init__.py  curd.py  models.py
src/tk_openai_sdk_agent/error_trace/: __init__.py  core.py
src/tk_openai_sdk_agent/file/: __init__.py  write.py
src/tk_openai_sdk_agent/message/: __init__.py  message.py
src/tk_openai_sdk_agent/models/: __init__.py  models.py
src/tk_openai_sdk_agent/objects/check_work/: config.toml  core.py  run.py
src/tk_openai_sdk_agent/objects/free_walk/: config.toml  core.py  run.py
src/tk_openai_sdk_agent/objects/free_walk_easy2/: __init__.py  core.py
src/tk_openai_sdk_agent/objects/free_walk_eazsy/: config.toml  core.py
src/tk_openai_sdk_agent/objects/free_walk_new/: __init__.py  config.toml  core.py  db_models.py  duplicate_detection.py  models.py  multi_process_save.py  pre_work.py  run.py
src/tk_openai_sdk_agent/objects/free_walk_pro/: config.toml  duplicate_detection.py  multi_process_save.py  pre_work.py  verify.py
src/tk_openai_sdk_agent/objects/free_walk_sys/: config.toml  main.py  test_load_toml.py
src/tk_openai_sdk_agent/process_bar/: __init__.py  cons.py
src/tk_openai_sdk_agent/report/: 最新报告.xlsx
src/tk_openai_sdk_agent/utils/: __init__.py  fail_rsp_reload.py  multi_process_save.py  utils.py
