[project]
name = "tk-ark-agent-with-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.78.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydantic-settings>=2.9.1",
    "tk-base-utils>=0.1.0",
    "tk-db-tool>=0.1.2",
]

